resnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: resnet-ingress

spec:
  rules:
  - host: resnet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resnet-service
            port:
              number: 8080
